# fair-maps-for-california-open-code

./: .gitignore  CONTRIBUTING.md  GUIDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: CALIFORNIA_JURISDICTIONS.md  METRICS_AND_COMPUTE.md
palo_alto_outputs/: palo_alto_redistricting_plans.csv  palo_alto_summary.txt  plan_1_block_assignment.csv  plan_2_block_assignment.csv  test_ensemble_stats.json  timing_log.csv  top_saved_plans_ranking.txt
scripts/: sample_geojson.py
src/: city_map_generator.py  city_map_generator_template.py  extract_city_data.py  extract_city_data_template.py
src/fairmaps/: __init__.py  aggregation.py  compute.py
src/fairmaps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fairmaps/metrics/: __init__.py  compactness.py  demographic.py
tests/: test_metrics.py
