[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fairmaps"
version = "0.1.0"
description = "Toolkit for measuring and detecting gerrymandering at the local level"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gerrychain>=0.2.19",
    "geopandas>=0.12.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "shapely>=2.0.0",
    "networkx>=2.8.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
